- Various taint fixes.  The 3 zoom settings still taint so the zoom category heading states this.

9.2.18 - 6th July 2022
- If 'Remove map border' is enabled, the map close and maximise/minimise buttons will now be shown on the right-side of the map.
- Fixed an issue with the game code which caused the premade group finder to show an error when opening the Dungeons section while you have a keystone.  As a result of this fix, the dungeon title will no longer be prefilled with the keystone level.
- Fixed a compatibility issue with World Quest Tracker addon and the 'Unlock map frame' setting in Leatrix Maps.

9.2.16 - 22nd June 2022
- In the game key bindings menu, you can now set a keybind to toggle Leatrix Maps.

9.2.13 - 1st June 2022
- Updated for game version 9.2.5.

9.2.06 - 13th April 2022
- Added a new setting 'Use default map'.  If enabled, the full-screen map will be used for the maximised map.

9.2.04 - 30th March 2022
- For developers, you can now configure Leatrix Maps from your own addon or script using the following as a guide:

-- Ensure Leatrix Maps does not replace LeaMapsDB on next reload
SlashCmdList["Leatrix_Maps"]("nosave")
-- Clear the settings database (optional but recommended)
wipe(LeaMapsDB)
-- Configure the settings (add any settings you like here)
LeaMapsDB["NoMapBorder"] = "On"
-- Reload the UI to apply the settings
ReloadUI()

9.2.03 - 23rd March 2022
- For 'Enhance dungeon icons', added icons for 'Synthesis Forge', 'Protoform Repository' and 'Exile's Hollow' to the Zereth Mortis map.

9.2.00 - 23rd February 2022
- Updated for game version 9.2.0.

9.1.44 - 9th February 2022